# Amline_Codex

./: .env.example  .gitignore  AGENT_READ_FIRST.md  README.md  agent.py  api.py  approval.py  browser_tool.py  local_bridge.py  main.py  policy.py  requirements.txt  run.ps1  tool_registry.py
hamgit-projects/backend/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .source-commit.txt  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  files_data.json  gunicorn.conf.py  makefile  pyproject.toml  pyrightconfig.json
hamgit-projects/backend/alembic/: README  env.py
hamgit-projects/backend/alembic/versions/: 1d470ef4fc82_add_tenant_family_members_count_and_.py  1ecd4aef98bc_add_new_files_table.py  20028cd307bc_task.py  2471510debda_add_subclause_name_to_contract_clauses.py  2752fd04aabc_contract_desc.py  27c874a2744a_user_call.py  32a684acc9c4_change_price_columns_to_biginteger.py  369951bee0ac_extrafields.py  39aae4e49c1f_color.py  3b7e994d2330_add_is_guaranteed_to_prcontracts.py  3bf6ac81d746_property_wanted_ad_title.py  3d22e77410b2_unique_discount_code.py  4415ce15020e_update_alembic.py  517e607242fa_remove_pwd_title.py  5228d64564e2_add_field.py  56ef0556691a_settlements.py  581802635076_city_district.py  58a2fd4e200e_call_type.py  59ba4c567083_call_status.py  5b3f21391c7a_change_foregin_keys_to_new_files_table.py  6b940c144af4_add_type_to_file__table.py  6c1309b9061e_contract_created_by.py  7470fa02a42c_eitaa_user_ud.py  a115009334fb_crm.py  (+29 more)
hamgit-projects/backend/src/: cli.py  di.py  main.py  start_workers.py  unit_of_work.py
hamgit-projects/backend/tests/: conftest.py  test_create_prc.py  test_property_dumps.py
(+2005 files in other folders)
