[tool.poetry]
name = "amline"
version = "0.1.0"
description = ""
authors = ["Mohsen Padidar <mxpadidar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[[tool.poetry.source]]
name = "parmincloud"
url = "https://pypi.parmincloud.ir/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
redis = "^5.0.7"
python-dateutil = "^2.9.0.post0"
minio = "^7.2.7"
python-magic = "^0.4.27"
pyjwt = "^2.8.0"
snowflake-id = "^1.0.2"
jdatetime = "^5.0.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
kavenegar = "^1.1.2"
gunicorn = "^23.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.25.1"}
typer = "^0.12.3"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
elasticsearch = "^8.15.0"
pytz = "^2024.1"
loguru = "^0.7.2"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
aio-pika = "^9.4.3"
types-pytz = "^2024.1.0.20240417"
aiohttp = "^3.10.5"
httpx = "^0.27.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
alembic = "^1.16.1"
apscheduler = "^3.11.0"
pymysql = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
alembic = "^1.13.2"
pytest = "^8.2.2"
types-python-dateutil = "^2.9.0.20240316"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["./src"]
filterwarnings = "ignore::DeprecationWarning"
